a new file added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>hammad</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus ratione dignissimos, est mollitia iure veniam consequatur itaque cum ullam,
+         nesciunt velit possimus architecto consectetur consequuntur nam, asperiores quis molestias officiis!</p>
     
 </body>
 </html>
